UIKit: add buttonCombo.tsx and fix gap for buttonWithIcon

--- a/packages/uikit/components/link/link.module.scss
+++ b/packages/uikit/components/link/link.module.scss
@@ -30,3 +30,7 @@
     transition: var(#{$theme+$button+$active+$transition});
   }
 }
+
+.icon {
+
+}
